# Federated-pytorch

./: README.md  centralized.py  client-output1.txt  client-output2.txt  client.py  server-output.txt  server.py
distributed-system/: centralized.py
distributed-system/xie/: README.md  plot.py  pyproject.toml  requirements.txt  training_log.txt
distributed-system/xie/xie/: __init__.py  client_app.py  server_app.py  task.py
