[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xie"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.0",
    "flwr-datasets[vision]>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Xie"

[tool.flwr.app.components]
serverapp = "xie.server_app:app"
clientapp = "xie.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 30
fraction-fit = 0.8
local-epochs = 1
batch-size = 32

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
